# ModernCppStarter

./: .gitignore  CMakeLists.txt
.github/workflows/: macos.yml  standalone.yml  ubuntu.yml
cmake/: CPM.cmake  options.cmake  projectDependencies.cmake  warnings.cmake
scripts/: docs.sh  release.sh  standalone.sh  strip.sh  test.sh
source/: greeter.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
